<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/layout_bg">

            <TextView
                android:id="@+id/texthai"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:text="@string/hai"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/idName"
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:layout_below="@+id/texthai"
                android:layout_alignStart="@+id/texthai"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="2dp"
                android:text="@string/nama_panjang"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/idPic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignTop="@+id/texthai"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/profilepic"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_shadow="false" />

            <TextView
                android:id="@+id/idKelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idName"
                android:layout_alignStart="@+id/idName"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/kelas"
                android:textColor="@color/white">

            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginStart="170dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_biru">

            <TextView
                android:id="@+id/idKegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/kegiatan_sekarang"
                android:textAlignment="textEnd"
                android:textColor="@color/grey"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/idJam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idKegiatan"
                android:layout_alignStart="@+id/idKegiatan"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/grey"
                android:layout_marginEnd="20dp"
                android:text="@string/jam"
                android:textAlignment="textEnd"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/idMapel"
                android:textColor="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idJam"
                android:layout_alignStart="@+id/idKegiatan"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/mapel"
                android:textAlignment="textEnd"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="550dp">

            <View
                android:id="@+id/garis"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/textView"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="0dp"
                android:background="@color/Baby_blue" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/btnNilai"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/allerta"
                android:text="Menu"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnAbsen"
                android:layout_width="175dp"
                android:layout_height="90dp"
                android:layout_below="@+id/garis"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/absen"
                android:backgroundTint="#40FFFFFF"
                android:backgroundTintMode="src_over"
                android:text="@string/absensi"
                android:textColor="@color/black"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/btnNilai"
                android:layout_width="175dp"
                android:layout_height="90dp"
                android:layout_below="@+id/btnAbsen"
                android:layout_alignEnd="@+id/btnAbsen"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/nilai"
                android:backgroundTint="#40FFFFFF"
                android:backgroundTintMode="src_atop"
                android:text="@string/nilai"
                android:textColor="@color/black"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/btnCat"
                android:layout_width="175dp"
                android:layout_height="90dp"
                android:layout_alignStart="@+id/btnJadwal"
                android:layout_alignTop="@+id/btnNilai"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/catatan"
                android:backgroundTint="#40FFFFFF"
                android:backgroundTintMode="src_over"
                android:text="@string/catatan"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck">

            </Button>

            <Button
                android:id="@+id/btnJadwal"
                android:layout_width="175dp"
                android:layout_height="90dp"
                android:layout_alignTop="@+id/btnAbsen"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/jadwal"
                android:backgroundTint="#40FFFFFF"
                android:backgroundTintMode="src_over"
                android:elevation="10dp"
                android:shadowColor="#808080"
                android:text="@string/jadwal"
                android:textColor="@color/black"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_bg"
                android:text="Log Out"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>